--- a/WS Chat/View/Base.lproj/Main.storyboard
+++ b/WS Chat/View/Base.lproj/Main.storyboard
@@ -80,40 +80,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="EnterText" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gJL-S6-hR8">
-                                <rect key="frame" x="0.0" y="593" width="315" height="30"/>
-                                <color key="backgroundColor" red="0.85538947430000001" green="0.85538947430000001" blue="0.85538947430000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <outlet property="delegate" destination="BYZ-38-t0r" id="eJC-QZ-cN0"/>
-                                </connections>
-                            </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A6T-yQ-sRh">
-                                <rect key="frame" x="315" y="593" width="60" height="30"/>
-                                <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="60" id="1U3-5t-wnT"/>
-                                    <constraint firstAttribute="height" constant="30" id="ZEP-aa-vQM"/>
-                                </constraints>
-                                <state key="normal" title="Send">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="sendMessageButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="U90-c3-Kno"/>
-                                </connections>
-                            </button>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="HX4-uL-Bn8">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="HX4-uL-Bn8">
                                 <rect key="frame" x="0.0" y="64" width="375" height="529"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="messageCell" id="jHK-37-OCQ" customClass="MessageTableViewCell" customModule="WS_Chat" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="jHK-37-OCQ" id="gO2-ta-KHq">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="UserName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Yp-WF-zqq">
@@ -149,15 +124,43 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="P5G-PW-LQM"/>
                                 </connections>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A6T-yQ-sRh">
+                                <rect key="frame" x="315" y="593" width="60" height="30"/>
+                                <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="60" id="1U3-5t-wnT"/>
+                                    <constraint firstAttribute="height" constant="30" id="ZEP-aa-vQM"/>
+                                </constraints>
+                                <state key="normal" title="Send">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="sendMessageButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="U90-c3-Kno"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="EnterText" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gJL-S6-hR8">
+                                <rect key="frame" x="0.0" y="593" width="315" height="30"/>
+                                <color key="backgroundColor" red="0.85538947430000001" green="0.85538947430000001" blue="0.85538947430000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="eJC-QZ-cN0"/>
+                                </connections>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="HX4-uL-Bn8" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="1ah-7L-H7w"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="A6T-yQ-sRh" secondAttribute="bottom" id="4g3-k4-s7d"/>
                             <constraint firstItem="gJL-S6-hR8" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="89s-YR-3ZN"/>
                             <constraint firstItem="A6T-yQ-sRh" firstAttribute="leading" secondItem="gJL-S6-hR8" secondAttribute="trailing" id="Ie0-RM-rMk"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="gJL-S6-hR8" secondAttribute="bottom" id="W8K-Uy-7eo"/>
+                            <constraint firstItem="HX4-uL-Bn8" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="b4i-ZA-m9E"/>
                             <constraint firstAttribute="trailing" secondItem="A6T-yQ-sRh" secondAttribute="trailing" id="c8U-ac-T2g"/>
+                            <constraint firstItem="gJL-S6-hR8" firstAttribute="top" secondItem="HX4-uL-Bn8" secondAttribute="bottom" id="hxF-Ve-FKG"/>
                             <constraint firstItem="A6T-yQ-sRh" firstAttribute="height" secondItem="gJL-S6-hR8" secondAttribute="height" id="l01-aq-rgJ"/>
+                            <constraint firstAttribute="trailing" secondItem="HX4-uL-Bn8" secondAttribute="trailing" id="wcv-fH-dx7"/>
                             <constraint firstItem="gJL-S6-hR8" firstAttribute="top" secondItem="wfy-db-euE" secondAttribute="top" constant="-30" id="y3b-LT-0aw"/>
                         </constraints>
                     </view>
